fixed spacing below author name in messages

--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,10 @@ table {
   display: none;
 }
 
+#author-par {
+  margin-bottom: 5px;
+}
+
 #message {
   text-align: left;
   padding: 5px;
